[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Environment.tres" type="TileSet" id=1]
[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Bubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/ProgressBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/ProgressBar.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Bubbles/border_04.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Bubbles/border_05.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Bubbles/border_02.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 41 )

[node name="Timeline" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( 65522, 8, 0, 65523, 8, 1, 65524, 8, 1, 65525, 8, 1, 65526, 8, 1, 65527, 8, 1, 65528, 8, 1, 65529, 8, 1, 65530, 8, 1, 65531, 8, 1, 65532, 8, 1, 65533, 8, 1, 65534, 8, 1, 65535, 8, 1, 0, 8, 1, 1, 8, 1, 2, 8, 1, 3, 8, 1, 4, 8, 1, 5, 8, 1, 6, 8, 1, 7, 8, 1, 8, 8, 1, 9, 8, 1, 10, 8, 1, 11, 8, 1, 12, 8, 2, 13, 17, 65536, 14, 17, 65537, 15, 17, 65537, 16, 17, 65537, 17, 17, 65538, 18, 9, 0, 19, 9, 1, 20, 9, 1, 21, 9, 1, 22, 9, 1, 23, 9, 1, 24, 9, 1, 25, 9, 1, 26, 9, 1, 27, 9, 1, 28, 9, 1, 29, 9, 1, 30, 9, 1, 31, 9, 1, 32, 9, 1, 33, 9, 1, 34, 9, 1, 35, 9, 1, 36, 9, 1, 37, 9, 1, 38, 9, 1, 39, 9, 1, 40, 9, 1, 41, 9, 1, 42, 9, 1, 43, 9, 1, 44, 9, 1, 45, 9, 1, 46, 9, 1, 47, 9, 1, 48, 9, 1, 49, 9, 1, 50, 9, 1, 51, 9, 1, 52, 9, 1, 53, 9, 1, 54, 9, 1, 55, 9, 1, 56, 9, 1, 57, 9, 1, 58, 9, 1, 59, 9, 1, 60, 9, 2, 131058, 8, 65536, 131059, 8, 65537, 131060, 8, 65537, 131061, 8, 65537, 131062, 8, 65537, 131063, 8, 65537, 131064, 8, 65537, 131065, 8, 65537, 131066, 8, 65537, 131067, 8, 65537, 131068, 8, 65537, 131069, 8, 65537, 131070, 8, 65537, 131071, 8, 65537, 65536, 8, 65537, 65537, 8, 65537, 65538, 8, 65537, 65539, 8, 65537, 65540, 8, 65537, 65541, 8, 65537, 65542, 8, 65537, 65543, 8, 65537, 65544, 8, 65537, 65545, 8, 65537, 65546, 8, 65537, 65547, 8, 65537, 65548, 8, 65538, 65554, 9, 65536, 65555, 9, 65537, 65556, 9, 65537, 65557, 9, 65537, 65558, 9, 65537, 65559, 9, 65537, 65560, 9, 65537, 65561, 9, 65537, 65562, 9, 65537, 65563, 9, 65537, 65564, 9, 65537, 65565, 9, 65537, 65566, 9, 65537, 65567, 9, 65537, 65568, 9, 65537, 65569, 9, 65537, 65570, 9, 65537, 65571, 9, 65537, 65572, 9, 65537, 65573, 9, 65537, 65574, 9, 65537, 65575, 9, 65537, 65576, 9, 65537, 65577, 9, 65537, 65578, 9, 65537, 65579, 9, 65537, 65580, 9, 65537, 65581, 9, 65537, 65582, 9, 65537, 65583, 9, 65537, 65584, 9, 65537, 65585, 9, 65537, 65586, 9, 65537, 65587, 9, 65537, 65588, 9, 65537, 65589, 9, 65537, 65590, 9, 65537, 65591, 9, 65537, 65592, 9, 65537, 65593, 9, 65537, 65594, 9, 65537, 65595, 9, 65537, 65596, 9, 65538, 196594, 8, 131072, 196595, 8, 131073, 196596, 8, 131073, 196597, 8, 131073, 196598, 8, 131073, 196599, 8, 131073, 196600, 8, 131073, 196601, 8, 131073, 196602, 8, 131073, 196603, 8, 131073, 196604, 8, 131073, 196605, 8, 131073, 196606, 8, 131073, 196607, 8, 131073, 131072, 8, 131073, 131073, 8, 131073, 131074, 8, 131073, 131075, 8, 131073, 131076, 8, 131073, 131077, 8, 131073, 131078, 8, 131073, 131079, 8, 131073, 131080, 8, 131073, 131081, 8, 131073, 131082, 8, 131073, 131083, 8, 131073, 131084, 8, 131074, 131090, 9, 131072, 131091, 9, 131073, 131092, 9, 131073, 131093, 9, 131073, 131094, 9, 131073, 131095, 9, 131073, 131096, 9, 131073, 131097, 9, 131073, 131098, 9, 131073, 131099, 9, 131073, 131100, 9, 131073, 131101, 9, 131073, 131102, 9, 131073, 131103, 9, 131073, 131104, 9, 131073, 131105, 9, 131073, 131106, 9, 131073, 131107, 9, 131073, 131108, 9, 131073, 131109, 9, 131073, 131110, 9, 131073, 131111, 9, 131073, 131112, 9, 131073, 131113, 9, 131073, 131114, 9, 131073, 131115, 9, 131073, 131116, 9, 131073, 131117, 9, 131073, 131118, 9, 131073, 131119, 9, 131073, 131120, 9, 131073, 131121, 9, 131073, 131122, 9, 131073, 131123, 9, 131073, 131124, 9, 131073, 131125, 9, 131073, 131126, 9, 131073, 131127, 9, 131073, 131128, 9, 131073, 131129, 9, 131073, 131130, 9, 131073, 131131, 9, 131073, 131132, 9, 131074 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -64 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -32 )
current = true

[node name="TimelineWelcome" parent="." instance=ExtResource( 3 )]
position = Vector2( 96, -104 )
bubble_text = "This is the Timeline.
You can learn how I got there chronogically."

[node name="Portal" parent="." instance=ExtResource( 4 )]
position = Vector2( -192, 0 )
next_scene = "res://Nodes/Hub.tscn"

[node name="ProgressBarNode" parent="." instance=ExtResource( 5 )]
margin_left = 848.0
margin_top = -88.0
margin_right = 848.0
margin_bottom = -88.0

[node name="TitleContainer" parent="ProgressBarNode" index="2"]
visible = false

[node name="Label" parent="ProgressBarNode/TitleContainer" index="0"]
margin_right = 141.0
text = "High School Education"

[node name="Label" parent="ProgressBarNode/FirstDateContainer" index="0"]
text = "2016"

[node name="ContentContainer" parent="ProgressBarNode" index="5"]
visible = false

[node name="Label" parent="ProgressBarNode/ContentContainer" index="0"]
margin_right = 233.0
margin_bottom = 82.0
text = "First year : Tinkering with
HTML, CSS and javascript

Third year : Python course and
a group project, create a videogame."

[node name="ProgressBarNode2" parent="." instance=ExtResource( 5 )]
margin_left = 1104.0
margin_top = -88.0
margin_right = 1104.0
margin_bottom = -88.0

[node name="TitleContainer" parent="ProgressBarNode2" index="2"]
visible = false

[node name="Label" parent="ProgressBarNode2/TitleContainer" index="0"]
margin_right = 166.0
text = "Computer Science Degree"

[node name="Label" parent="ProgressBarNode2/FirstDateContainer" index="0"]
text = "2019"

[node name="ContentContainer" parent="ProgressBarNode2" index="5"]
visible = false

[node name="Label" parent="ProgressBarNode2/ContentContainer" index="0"]
margin_right = 175.0
margin_bottom = 116.0
text = "First year : reinforcing
python knowledge, learning
OOP with java, SQL.

Second year : first usage
of Javascript and PHP,
and Scala projects"

[node name="ProgressBarNode3" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1360.0
margin_top = -88.0
margin_right = 1360.0
margin_bottom = -88.0
script = ExtResource( 6 )

[node name="ProgressBar" type="ProgressBar" parent="ProgressBarNode3"]
margin_left = -128.0
margin_top = -16.0
margin_right = 128.0
margin_bottom = 16.0
percent_visible = false

[node name="Timer" type="Timer" parent="ProgressBarNode3"]
wait_time = 0.015

[node name="TitleContainer" type="VBoxContainer" parent="ProgressBarNode3"]
visible = false
margin_left = -16.0
margin_top = -248.0
margin_right = 12.0
margin_bottom = -234.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ProgressBarNode3/TitleContainer"]
margin_right = 128.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Video Game Degree"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ProgressBarNode3/TitleContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -11.0
margin_right = 20.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 7 )
patch_margin_left = 19
patch_margin_top = 18
patch_margin_right = 20
patch_margin_bottom = 18

[node name="FirstDateContainer" type="VBoxContainer" parent="ProgressBarNode3"]
margin_left = -152.0
margin_top = -40.0
margin_right = -107.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ProgressBarNode3/FirstDateContainer"]
margin_right = 45.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "2021"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ProgressBarNode3/FirstDateContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -11.0
margin_right = 16.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )
patch_margin_left = 19
patch_margin_top = 18
patch_margin_right = 20
patch_margin_bottom = 18

[node name="SecondDateContainer" type="VBoxContainer" parent="ProgressBarNode3"]
margin_left = 56.0
margin_top = -40.0
margin_right = 101.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ProgressBarNode3/SecondDateContainer"]
margin_right = 45.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "2024..."
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ProgressBarNode3/SecondDateContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -11.0
margin_right = 16.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )
patch_margin_left = 19
patch_margin_top = 18
patch_margin_right = 20
patch_margin_bottom = 18

[node name="ContentContainer" type="VBoxContainer" parent="ProgressBarNode3"]
visible = false
margin_left = -24.0
margin_top = -160.0
margin_right = 26.0
margin_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ProgressBarNode3/ContentContainer"]
margin_right = 171.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "First year : Learning Unity,
Game Design and Blender.
Some networking classes

More to come"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ProgressBarNode3/ContentContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -11.0
margin_right = 16.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 9 )
patch_margin_left = 19
patch_margin_top = 18
patch_margin_right = 20
patch_margin_bottom = 18

[node name="Area2D" type="Area2D" parent="ProgressBarNode3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProgressBarNode3/Area2D"]
position = Vector2( -128, 64 )
shape = SubResource( 1 )

[connection signal="timeout" from="ProgressBarNode3/Timer" to="ProgressBarNode3" method="_on_Timer_timeout"]
[connection signal="area_entered" from="ProgressBarNode3/Area2D" to="ProgressBarNode3" method="_on_Area2D_area_entered"]

[editable path="ProgressBarNode"]
[editable path="ProgressBarNode2"]
